updated the css

--- a/DholBajao/styles.css
+++ b/DholBajao/styles.css
@@ -16,33 +16,32 @@ footer {
   color: #DBEDF3;
   font-family: sans-serif;
 }
-
 .w {
-
+  background-image: url(./images/tom1.png);
 }
 
 .a {
-
+  background-image: url(images/tom2.png);
 }
 
 .s {
-
+  background-image: url(images/tom3.png);
 }
 
 .d {
-
+  background-image: url(images/tom4.png);
 }
 
 .j {
-
+  background-image: url(images/snare.png);
 }
 
 .k {
-
+  background-image: url(images/crash.png);
 }
 
 .l {
-
+  background-image: url(images/kick.png);
 }
 
 .set {
